--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,12 @@
     <title>Accusoft</title>
   </head>
   <body class="font-Poppins bg-accusoft-black">
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea name="message"></textarea>
+    </form>
+    
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
